# ASSIGNMENT_Group_Project

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  payroll.c  tbox.c
include/: as_argparse.h  as_array.h  as_bitctl.h  as_compr_RLE.h  as_compress.h  as_container.h  as_employee.h  as_encrypt.h  as_enrypt.h  as_errno.h  as_functional.h  as_general.h  as_hash.h  as_list.h  as_map.h  as_payroll.h  as_tree.h
src/: as_argparse.c  as_array.c  as_bitctl.c  as_compr_RLE.c  as_compress.c  as_container.c  as_employee.c  as_encrypt.c  as_errno.c  as_functional.c  as_hash.c  as_list.c  as_payroll.c  functional.c
test/: TestCase.c  TestCase_Array.c  TestCase_Encryption.c  TestCase_Hash.c  TestCase_LinkedList.c  TestCase_Payroll.c  TestCase_RLE.c
